@@ -15,6 +15,7 @@
 * The lifestream_feedid_<N> class name is now the ID of the feed, and not the feed type.
 * Added Last Update column to feed list.
 * Added a setting for the number of items to display in the feed.
+* Added start_date and end_date options to all lifestream calls.
 
 0.93b
 
